--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 
 
     </div>
-
+    <!-- JQuery -->
+    <script src="https://code.jquery.com/jquery.js"></script>
+    <!-- Javascript -->
     <script src="assets/crime.js"></script>
 
 </body>
