--- a/index.html
+++ b/index.html
@@ -5,9 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+
+    <script src='https://api.mapbox.com/mapbox-gl-js/v1.0.0/mapbox-gl.js'></script>
+    <link href='https://api.mapbox.com/mapbox-gl-js/v1.0.0/mapbox-gl.css' rel='stylesheet' />
+
+    <!-- jQuery -->
+    <script src="https://code.jquery.com/jquery.js"></script>
+
 </head>
 <body>
+
+        <script src='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.4.0/mapbox-gl-geocoder.min.js'></script>
+        <link rel='stylesheet' href='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.4.0/mapbox-gl-geocoder.css' type='text/css' />
+
+        <div id='geocoder' class='geocoder'></div>
+
     <div id="pageContainer">
+            <!-- Map -->
+            <div id='map' style='width: 1480x; height: 680px;'></div>
+
+            <!-- Text input to test searching -->
+            <input id="input" placeholder="test me dad" type="text">
+            <button id="submit">Submit</button>
 
 
     </div>
